Change video, remake preloader, minor fix on gulp, profile height changes, back visibility to quizzes button gor nonLogged user

--- a/assets/styles/inc/_layout.scss
+++ b/assets/styles/inc/_layout.scss
@@ -167,13 +167,36 @@ body {
   text-align: center;
 }
 
+@keyframes preloader-rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 /* Preloader */
 .preloader {
-    background: url(../i/preloader.gif) center center no-repeat rgb(0,0,0);
-    opacity: .5;
+    background: rgba( 0, 0, 0, 0.4);
     position: fixed;
+    opacity: 0.8;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    z-index: 100;
+
+    &:after {
+      content: '';
+      @extend .icon-preloader;
+      animation: preloader-rotate 1.5s linear infinite;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto; 
+      z-index: 101;   
+    }
 }
